<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Yoobie</string>
    <string name="imgDes">missing link</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pleae_wait">Please wait...</string>

    <string name="action_settings">Settings</string>
    <string name="countdown_holder">00</string>

    <string name="how_it_works">How It Works</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="replay">REPLAY &amp; CLAIM</string>

    <string name="animation">ANIMATION</string>
    <string name="slideIn">Slide In</string>
    <string name="fadeIn">Fade In</string>
    <string name="zoomIn">Zoom In</string>
    <string name="placement">PLACEMENT</string>
    <string name="beforeLock">Before Lockscreen</string>
    <string name="afterLock">After Lock Screen</string>
    <string name="wifiOnly">DOWNLOAD OVER WIFI ONLY</string>
    <string name="logout">LOGOUT</string>

    <string name="last_viewed">Lasted Viewed Tile</string>
    <string name="not_the_one">Not the one you were looking for?</string>
    <string name="all_current_tiles">All current tiles can be viewed on our website: yoobieapp.com/current-ads</string>
    <string name="if_you_wish">If you wish to find out more about this product or service, click the button below to visit their website.</string>
    <string name="go_to_website">GO TO WEBSITE</string>

    <string name="email_signup">EMAIL SIGN UP</string>
    <string name="facebook_signup">FACEBOOK SIGN UP</string>
    <string name="signIn">Already have an account? Sign in</string>

    <string name="email_input_hint">Email Address</string>
    <string name="pass_hint">Password</string>
    <string name="confirm_pass_hint">Confirm Password</string>
    <string name="name_hint">Full name</string>
    <string name="phone_hint">Phone number</string>
    <string name="dob_hint">Date of birth</string>
    <string name="term_agree">I agree to the terms and conditions</string>
    <string name="signIn_butt">SIGN IN</string>
    <string name="signUp_butt">SIGN UP</string>
    <string name="continue_butt">COONTINUE</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="dob_def" tools:ignore="TypographyDashes">1999-09-09</string>

</resources>
