<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_how_it_works"
            android:icon="@drawable/how_works_icon"
            android:title="@string/how_it_works" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_icon"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contact_icon"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_terms_service"
            android:icon="@drawable/terms_icon"
            android:title="@string/terms_of_service" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/privacy_icon"
            android:title="@string/privacy_policy" />
    </group>

</menu>
