<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/popup"
    android:layout_width="310dp"
    android:layout_height="510dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/last_viewed"
        android:textColor="#FFFFFF"/>

    <ImageView
        android:id="@+id/imageLastView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imgDes"
        app:srcCompat="@drawable/notaval" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageLastView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="18dp"
        android:text="@string/not_the_one"
        android:textColor="#FFFFFF"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/all_current_tiles"
        android:textColor="#FFFFFF"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/if_you_wish"
        android:textColor="#FFFFFF"
        android:gravity="center" />

    <Button
        android:id="@+id/goToWebbutton"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:textSize="20dp"
        android:text="@string/go_to_website"
        android:textColor="#FFFFFF"
        android:background="@drawable/yoobie_button" />

</RelativeLayout>