<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="nz.co.udenbrothers.yoobie.SettingFragment">

    <RadioGroup
        android:id="@+id/radioGroupAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/slideIn"
        android:orientation='horizontal'
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <RadioButton
            android:id="@+id/slideIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_horizontal|top"
            android:text="@string/slideIn"
            android:textSize="12dp" />

        <RadioButton
            android:id="@+id/zoomIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_horizontal|top"
            android:text="@string/zoomIn"
            android:textSize="12dp" />

        <RadioButton
            android:id="@+id/fadeIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_horizontal|top"
            android:text="@string/fadeIn"
            android:textSize="12dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/animation"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/placement"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27999997" />

    <RadioGroup
        android:id="@+id/radioGroupTiming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/afterLock"
        android:orientation='horizontal'
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <RadioButton
            android:id="@+id/beforeLock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_horizontal|top"
            android:text="@string/beforeLock"
            android:textSize="12dp" />

        <RadioButton
            android:id="@+id/afterLock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center_horizontal|top"
            android:text="@string/afterLock"
            android:textSize="12dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifiOnly"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53999996" />

    <CheckBox
        android:id="@+id/wifiCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:text="@string/logout"
        android:textColor="#ffffff"
        android:textSize="35dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

</android.support.constraint.ConstraintLayout>
