<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nz.co.udenbrothers.yoobie.SignUp1Activity">

    <nz.co.udenbrothers.yoobie.wigets.WaveView
        android:id="@+id/wave"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:contentDescription="@string/imgDes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/finger" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="SIGN UP"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/yoobie_button"
        android:text="@string/continue_butt"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/white_dot" />

        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/grey_dot" />

    </RelativeLayout>

    <nz.co.udenbrothers.yoobie.wigets.YoobieInput
        android:id="@+id/inputMail"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginEnd="@dimen/input_padding"
        android:layout_marginStart="@dimen/input_padding"
        app:inputIcon="@drawable/mail_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholder="@string/email_input_hint" />

    <nz.co.udenbrothers.yoobie.wigets.YoobieInput
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginEnd="@dimen/input_padding"
        android:layout_marginStart="@dimen/input_padding"
        app:inputType="password"
        app:inputIcon="@drawable/password_icon"
        app:placeholder="@string/pass_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMail" />

    <nz.co.udenbrothers.yoobie.wigets.YoobieInput
        android:id="@+id/inputComPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginEnd="@dimen/input_padding"
        android:layout_marginStart="@dimen/input_padding"
        app:inputType="password"
        app:inputIcon="@drawable/password_icon"
        app:placeholder="@string/confirm_pass_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <CheckBox
        android:id="@+id/termsCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/term_agree"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputComPassword" />

</android.support.constraint.ConstraintLayout>
