<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nz.co.udenbrothers.yoobie.StartFragment">

    <nz.co.udenbrothers.yoobie.wigets.CountdownView
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <nz.co.udenbrothers.yoobie.wigets.YoobieText
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/yoobie_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:text="@string/email_signup"
        app:textIcon="@drawable/mail_icon" />

    <nz.co.udenbrothers.yoobie.wigets.YoobieText
        android:id="@+id/facebookButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="85dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/facebook_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:text="@string/facebook_signup"
        app:textIcon="@drawable/facebook_icon" />

    <TextView
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/signIn"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/facebookButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
